--- a/src/.lintstagedrc.json
+++ b/src/.lintstagedrc.json
@@ -1,11 +1,11 @@
 {
-  "frontend/**/*.ts": [
+  "*.ts": [
     "prettier --write",
     "eslint"
   ],
-  "frontend/**/*.html": [
+  "*.html": [
     "eslint",
     "prettier --write"
   ],
-  "frontend/**/*.scss": "prettier --write"
+  "*.scss": "prettier --write"
 }
