--- a/angular.json
+++ b/angular.json
@@ -9,13 +9,11 @@
         "@schematics/angular:component": {
           "style": "scss",
           "standalone": true,
-          "skipTests": true,
           "skipImport": true,
-          "flat": true
+          "changeDetection": "OnPush"
         },
         "@schematics/angular:pipe": {
           "standalone": true,
-          "skipTests": true,
           "skipImport": true
         }
       },
@@ -116,6 +114,11 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/app/core/styles/"
+              ]
+            },
             "polyfills": [
               "zone.js",
               "zone.js/testing"
@@ -126,7 +129,7 @@
               "src/core/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+              "@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/app/core/styles/main.scss"
             ],
             "scripts": []
